Quarto: criado as rotas para os metodos PUT/PATC
